@@ -242,7 +242,7 @@ public class XSGYear extends XSType {
 		if (jsc == null)
 			jsc = new JSourceCode();
 		
-		jsc.add("DateTimeValidator typeValidator = new DateTimeValidator();");
+		jsc.add("org.exolab.castor.xml.validators.DateTimeValidator typeValidator = new org.exolab.castor.xml.validators.DateTimeValidator();");
 		
 		if (hasMinimum()) {
 			jsc.add("try {");
