@@ -331,7 +331,7 @@ public class XSInteger extends XSPatternBase {
 
         if (jsc == null) 
             jsc = new JSourceCode();
-        jsc.add("IntegerValidator typeValidator = new IntegerValidator();");
+        jsc.add("org.exolab.castor.xml.validators.IntegerValidator typeValidator = new org.exolab.castor.xml.validators.IntegerValidator();");
                 
         if (hasMinimum()) {
             Integer min = getMinExclusive();
